// Generated from Verkehrsdaten_II_Berlin_ERD_UPDATED.sql
// Paste into dbdiagram.io (DBML)

Table stg_stammdaten_mq {
  mq_id15 bigint
  mq_kurzname varchar
  strasse varchar
  position varchar
  pos_detail varchar
  richtung varchar
  lon_wgs84 numeric(10,6)
  lat_wgs84 numeric(10,6)
  snapshot_date date
  source_file varchar
  ingested_at timestamptz
}

Table stg_stammdaten_detector {
  det_id15 bigint
  mq_id15 bigint
  det_name_alt varchar
  det_name_neu varchar
  spur varchar
  annotation varchar
  kommentar varchar
  inbetriebnahme date
  abbaudatum date
  deinstalliert varchar
  lon_wgs84 numeric(10,6)
  lat_wgs84 numeric(10,6)
  snapshot_date date
  source_file varchar
  ingested_at timestamptz
}

Table stg_old_det_val_hr {
  detid_15 bigint
  tag date
  stunde int
  qualitaet decimal(5,2)
  q_kfz_det_hr int
  v_kfz_det_hr int
  q_pkw_det_hr int
  v_pkw_det_hr int
  q_lkw_det_hr int
  v_lkw_det_hr int
  source_file varchar
  ingested_at timestamptz
}

Table stg_old_mq_hr {
  mq_name varchar
  tag date
  stunde int
  qualitaet decimal(5,2)
  q_kfz_mq_hr int
  v_kfz_mq_hr int
  q_pkw_mq_hr int
  v_pkw_mq_hr int
  q_lkw_mq_hr int
  v_lkw_mq_hr int
  source_file varchar
  ingested_at timestamptz
}

Table stg_new_detector_hourly {
  det_name_alt varchar
  det_index int
  datum_ortszeit date
  stunde_ortszeit int
  vollstaendigkeit numeric(12,6)
  zscore_det0 numeric(12,6)
  zscore_det1 numeric(12,6)
  zscore_det2 numeric(12,6)
  hist_cor numeric(12,6)
  local_time timestamptz
  month int
  qkfz int
  qlkw int
  qpkw int
  utc timestamptz
  vkfz int
  vlkw int
  vpkw int
  source_file varchar
  ingested_at timestamptz
}

Table dim_mq {
  mq_id15 bigint [pk]
  mq_kurzname varchar [unique]
  strasse varchar
  position varchar
  pos_detail varchar
  richtung varchar
  lon_wgs84 numeric(10,6)
  lat_wgs84 numeric(10,6)
}

Table dim_detector {
  det_id15 bigint [pk]
  mq_id15 bigint
  det_name_alt varchar [unique]
  det_name_neu varchar
  spur varchar
  annotation varchar
  kommentar varchar
  inbetriebnahme date
  abbaudatum date
  deinstalliert varchar
  lon_wgs84 numeric(10,6)
  lat_wgs84 numeric(10,6)
}

Table dim_vehicle_class {
  vehicle_class_id smallint [pk]
  code varchar [unique]
  label varchar
}

Table dim_time_hour {
  ts_utc timestamptz [pk]
  date_local date
  hour_local int
  month_local int
}

Table fact_detector_hourly {
  det_id15 bigint
  ts_utc timestamptz
  vehicle_class_id smallint
  flow_q int
  speed_v int
  source_layout varchar
  created_at timestamptz
}

Table fact_mq_hourly {
  mq_id15 bigint
  ts_utc timestamptz
  vehicle_class_id smallint
  flow_q int
  speed_v int
  source_layout varchar
  created_at timestamptz
}

Table fact_quality_hourly {
  det_id15 bigint
  ts_utc timestamptz
  quality_old numeric(12,6)
  completeness_new numeric(12,6)
  zscore_det0 numeric(12,6)
  zscore_det1 numeric(12,6)
  zscore_det2 numeric(12,6)
  hist_cor numeric(12,6)
  source_layout varchar
  created_at timestamptz
}

Table pipeline_run {
  run_id uuid [pk]
  started_at timestamptz
  finished_at timestamptz
  status varchar
  source_year int
  source_month int
  source_layout varchar
  notes varchar
}

Table qa_features_hourly {
  det_id15 bigint
  ts_utc timestamptz
  run_id uuid
  row_count int
  missing_rate numeric(18,6)
  duplicate_rate numeric(18,6)
  freshness_lag_h int
}

Table ml_anomaly_score_hourly {
  det_id15 bigint
  ts_utc timestamptz
  run_id uuid
  model_name varchar
  anomaly_score numeric(12,6)
  is_anomaly boolean
  top_driver varchar
  driver_value numeric(12,6)
}

Table kpi_definition {
  kpi_id INT [pk]
  kpi_name varchar [unique]
  description text
  grain varchar
  owner varchar
  formula text
  is_active boolean
  version int
  created_at timestamptz
}

Table kpi_value {
  kpi_id int
  ts_utc timestamptz
  entity_type varchar
  entity_id bigint
  value numeric(18,6)
  run_id uuid
  calculated_at timestamptz
}

Table kpi_confidence {
  kpi_id int
  ts_utc timestamptz
  entity_type varchar
  entity_id bigint
  confidence_score numeric(12,6)
  confidence_label varchar
  freshness_score numeric(12,6)
  volume_score numeric(12,6)
  null_score numeric(12,6)
  anomaly_score numeric(12,6)
  drift_score numeric(12,6)
  run_id uuid
  calculated_at timestamptz
}

Table "ingestion"."ingestion_runs" {
  run_id uuid [pk]
  triggered_by varchar
  status varchar
  started_at timestamptz
  ended_at timestamptz
  notes text
  payload jsonb
}

Table "ingestion"."file_manifest" {
  source_url text [pk]
  dataset_version varchar
  source_type varchar
  month_key varchar
  checksum_sha256 varchar
  bytes bigint
  last_modified timestamptz
  first_seen_at timestamptz
  last_seen_at timestamptz
  last_ingested_at timestamptz
  last_ingestion_run_id uuid
  last_status varchar
  metadata jsonb
}

Table "ingestion"."run_files" {
  run_id uuid
  source_url text
  action varchar
  row_count bigint
  message text
  created_at timestamptz

  indexes {
    (run_id, source_url) [pk]
  }
}

Table "raw"."traffic_rows" {
  id bigint [pk]
  run_id uuid
  source_url text
  month_key varchar
  dataset_version varchar
  source_type varchar
  row_number bigint
  payload jsonb
  loaded_at timestamptz
}

// Relationships
Ref: dim_detector.mq_id15 > dim_mq.mq_id15
Ref: fact_detector_hourly.det_id15 > dim_detector.det_id15
Ref: fact_detector_hourly.ts_utc > dim_time_hour.ts_utc
Ref: fact_detector_hourly.vehicle_class_id > dim_vehicle_class.vehicle_class_id
Ref: fact_mq_hourly.mq_id15 > dim_mq.mq_id15
Ref: fact_mq_hourly.ts_utc > dim_time_hour.ts_utc
Ref: fact_mq_hourly.vehicle_class_id > dim_vehicle_class.vehicle_class_id
Ref: fact_quality_hourly.det_id15 > dim_detector.det_id15
Ref: fact_quality_hourly.ts_utc > dim_time_hour.ts_utc
Ref: qa_features_hourly.det_id15 > dim_detector.det_id15
Ref: qa_features_hourly.ts_utc > dim_time_hour.ts_utc
Ref: qa_features_hourly.run_id > pipeline_run.run_id
Ref: ml_anomaly_score_hourly.det_id15 > dim_detector.det_id15
Ref: ml_anomaly_score_hourly.ts_utc > dim_time_hour.ts_utc
Ref: ml_anomaly_score_hourly.run_id > pipeline_run.run_id
Ref: kpi_value.kpi_id > kpi_definition.kpi_id
Ref: kpi_value.ts_utc > dim_time_hour.ts_utc
Ref: kpi_value.run_id > pipeline_run.run_id
Ref: kpi_confidence.kpi_id > kpi_definition.kpi_id
Ref: kpi_confidence.ts_utc > dim_time_hour.ts_utc
Ref: kpi_confidence.run_id > pipeline_run.run_id
Ref: "ingestion"."run_files".run_id > "ingestion"."ingestion_runs".run_id
Ref: "ingestion"."run_files".source_url > "ingestion"."file_manifest".source_url
Ref: "raw"."traffic_rows".run_id > "ingestion"."ingestion_runs".run_id
Ref: "raw"."traffic_rows".source_url > "ingestion"."file_manifest".source_url
